--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     var META = {
       api: "https://api.github.com",
       user: "MrLYC",
-      repo: "ycyc",
-      directory: "ycyc",
-      readme: "readme.md",
+      repo: "banbrick",
+      directory: "",
+      default: "README.md",
     };
   </script>
   <script id="toc-tpl" type="text/x-handlebars-template">
@@ -41,7 +41,7 @@
   <footer id="footer"></footer>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.2/handlebars.min.js"></script>
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.2.3/showdown.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.2.3/showdown.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
