--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" type="text/css" />
   <link rel="stylesheet" href="css/main.css" type="text/css" />
-  <link rel="stylesheet" href="css/markdown-previewer.css" type="text/css" />
+  <link rel="stylesheet" href="css/markdown.css" type="text/css" />
   <script type="text/javascript">
     var META = {
       api: "https://api.github.com",
@@ -35,7 +35,7 @@
       <p>Loading...</p>
     </div>
     <div id="content">
-      <article id="article"></article>
+      <article id="article" class="markdown-body"></article>
     </div>
   </div>
   <footer id="footer"></footer>
