--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
   <script id="toc-tpl" type="text/x-handlebars-template">
       <ul id="toc">
         {{#each toclist}}
-        <li class="toc-item" id="toc_item_{{sha}}"><a class="toc-lnk" href="#{{path}}">{{name}}</a></li>
+        <li class="toc-item" id="toc_item_{{sha}}">
+          <a class="toc-lnk" data-sha="{{sha}}" href="#{{path}}">{{name}}</a>
+        </li>
         {{/each}}
       </ul>
   </script>
   <script id="md-default" type="text/markdown">
-# Hello
+
   </script>
 </head>
 <body>
