--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <title>Github document pages</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" type="text/css" />
-  <link rel="stylesheet" href="css/main.css" type="text/css" />
   <link rel="stylesheet" href="css/markdown.css" type="text/css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/styles/zenburn.min.css" type="text/css" />
+  <link rel="stylesheet" href="css/main.css" type="text/css" />
   <script type="text/javascript">
     var META = {
       api: "https://api.github.com",
       user: "MrLYC",
-      repo: "banbrick",
+      repo: "javascript-style-guide",
       directory: "",
       default: "README.md",
     };
@@ -44,6 +45,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.2/handlebars.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.2.3/showdown.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.8.0/highlight.min.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
