update test repo name

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     var META = {
       api: "https://api.github.com",
       user: "MrLYC",
-      repo: "javascript-style-guide",
+      repo: "ghdoc-test",
       directory: "",
-      default: "README.md",
+      default: "markdown.md",
     };
   </script>
   <script id="toc-tpl" type="text/x-handlebars-template">
