add markdown render

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
     <div id="file-content">
-        <article class="markdown-body">{{ content }}</article>
+        <article id="markdown-body" v-html="content"></article>
     </div>
 </body>
 </html>
