--- a/src/html/index.html
+++ b/src/html/index.html
@@ -29,7 +29,7 @@
     </nav>
     <div id="file-content">
         <div class="content">
-            <article id="markdown-body" v-html="content"></article>
+            <article id="markdown-body" v-html="renderedContent"></article>
         </div>
     </div>
 </body>
