--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,14 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Github doc</title>
+    <title>Documents</title>
+    <script>
+    var CONFIG = {
+        user: "",
+        repo: "",
+        path: "",
+    }
+    </script>
 </head>
 <body>
     <header id="header">
