--- a/src/html/index.html
+++ b/src/html/index.html
@@ -25,6 +25,7 @@
                     :data-id="file.id"
                     :class="{ active: idx == index }"
                     @click="select(idx)"
+                    v-on:mouseenter="preloadByIndex(idx)"
                 >
                     <a class="file-name" href="#">{{ file.name | trimext }}</a>
                 </li>
