--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,8 +5,8 @@
     <title>Documents</title>
     <script>
     var CONFIG = {
-        user: "",
-        repo: "",
+        user: "mrlyc",
+        repo: "ghdoc-test",
         path: "",
     }
     </script>
@@ -25,7 +25,6 @@
                     :data-id="file.id"
                     :class="{ active: idx == index }"
                     @click="select(idx)"
-                    v-on:mouseenter="preloadByIndex(idx)"
                 >
                     <a class="file-name" href="#">{{ file.name | trimext }}</a>
                 </li>
