add default entry

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -27,7 +27,7 @@
                     @click="select(idx)"
                     v-on:mouseenter="preloadByIndex(idx)"
                 >
-                    <a class="file-name" href="#">{{ file.name | trimext }}</a>
+                    <a class="file-name" :href="config.entryPrefix + file.name">{{ file.name | trimext }}</a>
                 </li>
                 <li class="file-item" v-show="loading">
                     <div>Loading...</div>
