--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Documents</title>
     <script>
-    var CONFIG = {
+    var META = {
         user: "mrlyc",
         repo: "ghdoc-test",
         path: "",
