get meta from query string

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,8 +5,8 @@
     <title>Documents</title>
     <script>
     var META = {
-        user: "mrlyc",
-        repo: "ghdoc-test",
+        user: "",
+        repo: "",
         path: "",
     }
     </script>
