--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,7 @@
                     id="file-list-filter-input"
                     type="text"
                     v-model="pattern"
-                    :placeholder="message || 'Search'"
+                    :placeholder="message || 'Search files'"
                     :disabled="loading"
                     @keyup.enter="applyPattern"
                 />
