--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Documents</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
     <script>
     var META = {
         user: "",
